Fix footer and align nav to right

--- a/css/style-desktop.css
+++ b/css/style-desktop.css
@@ -10,7 +10,7 @@
 
 	body
 	{
-		font-size: 13pt;
+		font-size: 11pt;
 		min-width: 1200px;
 	}
 
@@ -108,7 +108,7 @@
 
 	.wrapper
 	{
-		padding: 8em 0 8em 0;
+		padding: 8em 0 3em 0;
 		text-align: center;
 	}
 	
