--- a/css/style.css
+++ b/css/style.css
@@ -159,7 +159,7 @@
 	
 	p, ul, ol, dl, table
 	{
-		margin-bottom: 0.1em;
+		margin-bottom: 0.5em
 	}
 	
 	section,
@@ -384,8 +384,7 @@
 
 	.wrapper
 	{
-		background-image: url('images/bg.png');
-		box-shadow: inset 0px 1px 0px 0px rgba(0,0,0,0.05), inset 0px 2px 3px 0px rgba(0,0,0,0.1);
+		box-shadow: inset 0px 0px 0px 0px rgba(0,0,0,0.05), inset 0px 0px 0px 0px rgba(0,0,0,0.01);
 	}
 
 	.wrapper-first
@@ -435,6 +434,14 @@
 			box-shadow: inset 0px 1px 0px 0px rgba(255,255,255,0.1), 0px 1px 0px 0px rgba(255,255,255,0.1);
 		}
 
+		.absolute20 {
+		    display: table;
+		    position: absolute;
+		    top: 20em;
+		    height: 50%;
+		    width: 50%;
+		}
+
 /*********************************************************************************/
 /* Nav                                                                           */
 /*********************************************************************************/
@@ -442,7 +449,7 @@
 	#nav
 	{
 		background-color: #282828;
-		text-align: center;
+		text-align: right;
 		position: fixed;
 		left: 0;
 		top: 0;
